components/ghost/ghost-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: etbit-ghost
  labels:
    app: etbit-ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etbit-ghost
  template:
    metadata:
      labels:
        app: etbit-ghost
    spec:
      containers:
      - name: etbit-ghost
        image: ghost:2.9.1-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: etbit-ghost-content
