components/ghost/ghost-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-service
spec:
  type: ClusterIP
  ports:
    - port: 2368
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: etbit-ghost
